--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Saasapp</title>
     <%= csrf_meta_tags %>
 
+
 <link href="https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap" rel="stylesheet">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -11,6 +12,8 @@
   </head>
 
   <body>
+    <div class="container">
     <%= yield %>
+    </div>
   </body>
 </html>
